fix: Arruma alguns erros de merge